# Master-Orchestrator

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  USAGE.md  backend-refactor-constitution.md  config.toml  main.py  master-orchestrator  pyproject.toml  run_backend_refactor.ps1
.devcontainer/: devcontainer.json
claude_orchestrator/: __init__.py  __main__.py
codex_orchestrator/: __main__.py  cli.py
docs/: CLI_REFERENCE.md  blog-draft-en.md  blog-draft-zh.md  flow-matrix.md  index.html  providers-and-routing.md  simple-isolation.md  simple-mode.md  simple-task-file.md  simple-validation.md
examples/: error_policy_example.yaml
master_orchestrator/: __init__.py  __main__.py  adaptive_pool.py  agent_cli.py  analysis_executor.py  architecture_contract.py  architecture_council.py  architecture_execution.py  architecture_trigger.py  audit_log.py  auto_model.py  autonomous.py  autonomous_helpers.py  backpressure.py  backup_gate.py  backup_manifest.py  blackboard.py  budget_tracker.py  catastrophic_guard.py  checkpoint.py  claude_cli.py  cli.py  cli_response.py  closure_planner.py  codex_cli.py  command_runtime.py  concurrency_group.py  config.py  context_compactor.py  context_quarantine.py  context_store.py  context_summarizer.py  convergence.py  cost_calculation.py  dag_generator.py  dag_loader.py  dashboard.py  delivery_manifest.py  diagnostics.py  discover.py  (+102 more)
scripts/: run_flow_matrix.py
tests/: conftest.py  test_adversarial_validation.py  test_claude_cli.py  test_cli_simplified.py  test_cost_tracking_e2e.py  test_diagnostics.py  (+14 more)
(+105 files in other folders)
